tests/errors/float/invalid-width.futil
component main() -> () {
    cells {
        f = std_float_const(0, 16, 0.5);
    }
    wires {}
    control {}
}